# practice-keycloak

./: .gitignore  README.md  docker-compose.yml
rust_api/: Cargo.toml  Dockerfile
rust_api/src/: config.rs  main.rs  routes.rs
rust_api/src/controllers/: getcode.rs  index.rs  login.rs  mod.rs  signup.rs  token.rs
