[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.6.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.0"
reqwest = "0.11"
jsonwebtoken = "8"
jsonwebtokens = "1"
base64 = "0.20"